Fix button not showing up.

--- a/components/features/Landing/DownloadMobile/DownloadMobile.module.scss
+++ b/components/features/Landing/DownloadMobile/DownloadMobile.module.scss
@@ -2,7 +2,7 @@
   width: 90vw;
   max-width: 600px;
   position: fixed;
-  top: calc(100vh - 80px);
+  bottom: 40px;
   height: 40px;
   margin-left: auto;
   margin-right: auto;
